feat: enable auth, and add messages support
